tests/exposure_test_different_but_equiv_rules/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: different-but-equiv-rules
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from:
    - podSelector: 
        matchLabels:
            role: monitoring
    ports:
    - port: 8050
      protocol: TCP
  egress:
  - to :
    - podSelector:
        matchExpressions:
          - key: role
            operator: In
            values:
            - monitoring
